# Titan-Protocol

./: .gitignore  README.md
.claude/: launch.json
.claude/worktrees/objective-payne/apps/web/: package-lock.json
.github/workflows/: android-build.yml  windows-build.yml
apps/api/app/: main.py
apps/api/app/api/routes/: quests.py
apps/web/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/public/: sw.js
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/src/: main.rs
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(marketing)/: layout.tsx  marketing.css  page.tsx
apps/web/src/app/(os)/: Dashboard.tsx  dashboard.css  layout.tsx  os.css  premium-ui.css
apps/web/src/components/: NeonCard.tsx
apps/web/src/components/analytics/: ThreeMonthGrid.tsx
apps/web/src/components/body/: AddTaskModal.tsx  AnalyticsTimeline.tsx  BodyCalendar.tsx  BodyMonthlyHeatBars.tsx  CalorieCore.tsx  MacroRing.tsx  MealModal.tsx  MealsList.tsx
apps/web/src/components/mind/: MindMonthGrid.tsx  MindTimeline.tsx
apps/web/src/hooks/: index.ts  useEngineScore.ts  useEngineTasks.ts
apps/web/src/lib/: analytics.ts  api.ts  backup.ts  body.ts  bodyScore.ts  body_logs.ts  body_math.ts  body_meals.ts  body_profile.ts  body_program.ts  body_program_generator.ts  body_stats.ts  command_center.ts  date.ts  db.ts  engine-adapter.ts  engine.ts  general.ts  goals.ts  id.ts  lifecycle.ts  mind.ts  money.ts  notifications.ts  nutrition.ts  pomodoro.ts  program.ts  program_tasks.ts  schemas.ts  scoring.ts  tasks.ts
(+84 files in other folders)
