[package]
name = "titan-protocol"
version = "0.1.0"
description = "Titan Protocol"
authors = ["Titan Protocol"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "window-all", "notification-all", "shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
